workshop/lab-12/np-allow-namespace-connectivity-update.yaml
---
kind: NetworkPolicy
apiVersion: projectcalico.org/v3
metadata:
  name: allow-namespace-connectivity
  namespace: tenant-2
spec:
  order: 10
  selector: ""
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
      source:
        namespaceSelector: kubernetes.io/metadata.name == 'tenant-2'
    - action: Allow
      source:
        namespaceSelector: kubernetes.io/metadata.name == 'tenant-3'
  egress:
    - action: Allow
